--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=management
+
+#H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+#Database
+spring.datasource.url=jdbc:h2:mem:mydatabase
+spring.datasource.username=myuser
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+
+#JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
