--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,16 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation "org.projectlombok:lombok:1.18.40"
-	annotationProcessor "org.projectlombok:lombok:1.18.40"}
+	annotationProcessor "org.projectlombok:lombok:1.18.40"
+	implementation "org.mapstruct:mapstruct:1.5.3.Final"
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
+    // https://mvnrepository.com/artifact/com.h2database/h2
+    runtimeOnly 'com.h2database:h2:2.3.230'
+	}
 
 tasks.named('test') {
 	useJUnitPlatform()
