--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
     // https://mvnrepository.com/artifact/com.h2database/h2
     runtimeOnly 'com.h2database:h2:2.3.230'
+    // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
 	}
 
 tasks.named('test') {
