--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     // https://mvnrepository.com/artifact/com.h2database/h2
     runtimeOnly 'com.h2database:h2:2.3.230'
     // https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+    implementation("jakarta.validation:jakarta.validation-api:3.1.1")
+    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	}
 
 tasks.named('test') {
